--- a/estimates_example.ipynb
+++ b/estimates_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "948f9a75",
+   "id": "cc5a715e",
    "metadata": {},
    "source": [
     "<font size=\"4\">\n",
@@ -22,19 +22,21 @@
     "p &= 0, \\qquad&&\\mathrm{on}\\,\\partial\\Omega,\n",
     "\\end{alignat}\n",
     "$$\n",
-    "with $K = I$ and $f(x,y) = 2 x (1-x) + 2 y (1 - y)$.\n",
+    "with $K = I$, and $f(x,y) = 2 x (1-x) + 2 y (1 - y)$.\n",
     "\n",
-    "Let $p_h \\in H^1_0(\\Omega)$ and $\\mathbf{u}_h \\in H(\\mathrm{div},\\Omega)$ denote the reconstructed pressure and flux, obtained by postprocessing the TPFA solution. The aim is to compute the upper bound\n",
+    "Let $p_h \\in H^1_0(\\Omega)$ and $\\mathbf{u}_h \\in H(\\mathrm{div},\\Omega)$ denote the reconstructed pressure and flux obtained by postprocessing the TPFA solution. The aim is to compute the upper bound\n",
     "$$\n",
-    "|||p-p_h||| \\leq ||K^{-1/2}\\left(\\mathbf{u}_h + K\\nabla p_h\\right)|| + \\frac{C_F}{c_1} ||f - \\nabla\\cdot\\mathbf{u}_h|| = \\eta_{\\mathrm{DF}} + \\eta_{\\mathrm{R}} = \\mathcal{M}(p_h,\\mathbf{u}_h;f),\n",
+    "\\begin{equation}\n",
+    "|||p-p_h||| \\leq ||K^{-1/2}\\left(\\mathbf{u}_h + K\\nabla p_h\\right)|| + \\frac{C_{F,\\Omega}}{c_1} ||f - \\nabla\\cdot\\mathbf{u}_h|| :=  \\mathcal{M}(p_h,\\mathbf{u}_h;f),\n",
+    "\\end{equation}\n",
     "$$\n",
-    "where $C_F = \\frac{1}{\\sqrt{2}\\pi}$ and $c_1=1$ for our setup.\n",
+    "where $C_{F,\\Omega} = \\frac{1}{\\sqrt{2}\\pi}$ and $c_1=1$ for our setup.\n",
     "</font>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9947bebe",
+   "id": "813e055b",
    "metadata": {},
    "source": [
     "## Import packages and modules"
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "733178f4",
+   "id": "1273752f",
    "metadata": {},
    "source": [
     "## Obtain approximate solution using TPFA"
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73830746",
+   "id": "293fad66",
    "metadata": {},
    "source": [
     "### Create a grid"
@@ -85,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6cc6444b",
+   "id": "91ed1adb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c235fb9a",
+   "id": "94552924",
    "metadata": {},
    "source": [
     "### Asign data"
@@ -110,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d65341ca",
+   "id": "e2c7d2a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b3172f8",
+   "id": "754f60a8",
    "metadata": {},
    "source": [
     "### Discretize and solve"
@@ -152,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6cccba56",
+   "id": "45d3cd81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400a3e16",
+   "id": "b6a2cd0c",
    "metadata": {},
    "source": [
     "## Estimate the errors"
@@ -184,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b65d5a73",
+   "id": "cd2b403d",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aa34a77",
+   "id": "58eed5a1",
    "metadata": {},
    "source": [
     "### Retrieve the errors"
@@ -223,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b1f0ef0",
+   "id": "9d7ea65b",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2680e5a2",
+   "id": "1fae344d",
    "metadata": {},
    "source": [
     "### Plot the errors"
@@ -262,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "393c6da9",
+   "id": "78269645",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a301e2cd",
+   "id": "e62f2dad",
    "metadata": {},
    "source": [
     "### Efficiency index"
@@ -281,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d168a786",
+   "id": "a990b3f8",
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a85c05c",
+   "id": "7f0be548",
    "metadata": {},
    "source": [
     "### Error vs. computational effort"
@@ -330,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6dcc3a48",
+   "id": "53247828",
    "metadata": {},
    "outputs": [
     {
