--- a/estimates_example.ipynb
+++ b/estimates_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b899a1d5",
+   "id": "fac962ba",
    "metadata": {},
    "source": [
     "<font size=\"4\">\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aadb671",
+   "id": "5cb390c0",
    "metadata": {},
    "source": [
     "## Import packages and modules"
@@ -45,17 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "448fb626",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "dba02237",
    "metadata": {},
    "outputs": [],
@@ -70,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57738567",
+   "id": "fa3cee44",
    "metadata": {},
    "source": [
     "## Obtain approximate solution using TPFA"
@@ -78,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b46d401",
+   "id": "73fc9a33",
    "metadata": {},
    "source": [
     "### Create a grid"
@@ -86,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7ea8ca4f",
+   "execution_count": 2,
+   "id": "bdabd5cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +87,12 @@
     "\n",
     "gb = network_2d.mesh(mesh_args)\n",
     "g = gb.grids_of_dimension(2)[0]\n",
-    "#pp.plot_grid(g, alpha=0.1, plot_2d=True, figsize=(5,5))"
+    "# pp.plot_grid(g, alpha=0.1, plot_2d=True, figsize=(5,5))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7a0cba5a",
+   "id": "3b0dd7e9",
    "metadata": {},
    "source": [
     "### Asign data"
@@ -111,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "946ae3b1",
+   "execution_count": 3,
+   "id": "66dbb952",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Obtain exact source terms\n",
     "qp_elements = mde.estimates_utils.get_quadpy_elements(g, g)\n",
-    "int_method = qp.t2.get_good_scheme(3)\n",
+    "int_method = qp.t2.get_good_scheme(2)\n",
     "def f(x):\n",
     "    return 2 * x[0] * (1 - x[0]) + 2 * x[1] * (1 - x[1])\n",
     "integrated_sources = int_method.integrate(f, qp_elements)\n",
@@ -145,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ceb748a",
+   "id": "1b6b77fc",
    "metadata": {},
    "source": [
     "### Discretize and solve"
@@ -153,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1ed46674",
+   "execution_count": 4,
+   "id": "c201188c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +151,7 @@
     "for g, d in gb:\n",
     "    d[pp.PRIMARY_VARIABLES] = {\"pressure\": {\"cells\": 1, \"faces\": 0}}\n",
     "    d[pp.DISCRETIZATION] = {\n",
-    "        \"pressure\": {\"diffusion\": pp.Mpfa(\"flow\"), \"source\": pp.ScalarSource(\"flow\")}\n",
+    "        \"pressure\": {\"diffusion\": pp.Tpfa(\"flow\"), \"source\": pp.ScalarSource(\"flow\")}\n",
     "    }\n",
     "    \n",
     "# Assemble and solve\n",
@@ -172,12 +161,12 @@
     "sol = sps.linalg.spsolve(A, b)\n",
     "assembler.distribute_variable(sol)\n",
     "\n",
-    "#pp.plot_grid(g, d[pp.STATE][\"pressure\"], plot_2d=True, figsize=(6,5))"
+    "# pp.plot_grid(g, d[pp.STATE][\"pressure\"], plot_2d=True, figsize=(6,5))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20ee356b",
+   "id": "70af3f01",
    "metadata": {},
    "source": [
     "## Estimate the errors"
@@ -185,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7fb32432",
+   "execution_count": 5,
+   "id": "a8905115",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e91e258",
+   "id": "e8773eb1",
    "metadata": {},
    "source": [
     "### Retrieve the errors"
@@ -224,20 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b62af4a8",
+   "execution_count": 6,
+   "id": "02d8def5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Diffusive error: 0.022165063526313637\n",
-      "Residual error: 0.02272476085160069\n",
-      "Majorant: 0.04488982437791433\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Diffusive error\n",
     "diffusive_error = estimates.get_local_error(g, d, \"diffusive_error\")\n",
@@ -248,33 +227,33 @@
     "# Majorant (total error)\n",
     "majorant = estimates.get_majorant()\n",
     "\n",
-    "print(f\"Diffusive error: {diffusive_error}\")\n",
-    "print(f\"Residual error: {residual_error}\")\n",
-    "print(f\"Majorant: {majorant}\")"
+    "# print(f\"Diffusive error: {diffusive_error}\")\n",
+    "# print(f\"Residual error: {residual_error}\")\n",
+    "# print(f\"Majorant: {majorant}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20b04ed6",
+   "id": "8018d61e",
    "metadata": {},
    "source": [
-    "### Plot the errors"
+    "### Plot diffusive and residual errors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0415e723",
+   "execution_count": 7,
+   "id": "75788524",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pp.plot_grid(g, d[pp.STATE][\"diffusive_error\"], figsize=(6, 5), plot_2d=True, title=\"Diffusive error\")\n",
-    "#pp.plot_grid(g, d[pp.STATE][\"residual_error\"], figsize=(6, 5), plot_2d=True, title=\"Residual error\")"
+    "# pp.plot_grid(g, d[pp.STATE][\"diffusive_error\"], figsize=(6, 5), plot_2d=True, title=\"Diffusive error\")\n",
+    "# pp.plot_grid(g, d[pp.STATE][\"residual_error\"], figsize=(6, 5), plot_2d=True, title=\"Residual error\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "61854ca0",
+   "id": "bc1e5010",
    "metadata": {},
    "source": [
     "### Efficiency index"
@@ -282,20 +261,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f69301dc",
+   "execution_count": 8,
+   "id": "7056a0c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True error: 0.017312040801477736\n",
-      "Majorant: 0.04488982437791433\n",
-      "Efficiency index: 2.592982820031396\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We know that p(x, y) = x (1 - x) + y (1 - y)\n",
     "\n",
@@ -316,14 +285,14 @@
     "\n",
     "true_error = np.sum(int_method.integrate(integrand, qp_elements)) ** 0.5\n",
     "\n",
-    "print(f\"True error: {true_error}\")\n",
-    "print(f\"Majorant: {majorant}\")\n",
-    "print(f\"Efficiency index: {majorant/true_error}\")"
+    "# print(f\"True error: {true_error}\")\n",
+    "# print(f\"Majorant: {majorant}\")\n",
+    "# print(f\"Efficiency index: {majorant/true_error}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "afeadf08",
+   "id": "577c5544",
    "metadata": {},
    "source": [
     "### Error vs. computational effort"
@@ -331,17 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "453614b5",
+   "execution_count": 9,
+   "id": "589a1479",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TPFA\n",
     "mesh_sizes = np.array([0.1, 0.05, 0.025, 0.0125, 0.00625])\n",
-    "true_errors = np.array([0.0173, 0.00889, 0.00441, 0.00220, 0.00109])\n",
-    "majorants = np.array([0.0449, 0.0227, 0.0113, 0.00563, 0.00280])\n",
-    "efficiency_indices = np.array([2.59, 2.55, 2.56, 2.56, 2.56])\n",
+    "true_errors = np.array([0.0180, 0.0103, 0.00522, 0.00316, 0.00258])\n",
+    "majorants = np.array([0.0460, 0.0249, 0.0124, 0.00703, 0.0046])\n",
+    "efficiency_indices = np.array([2.56, 2.42, 2.38, 2.22, 1.77])\n",
     "\n",
-    "# Error vs 1/h\n",
+    "# # Error vs 1/h\n",
     "# plt.plot(np.log2(1/mesh_sizes), np.log2(true_errors), marker=\"o\", label=\"true error\")\n",
     "# plt.plot(np.log2(1/mesh_sizes), np.log2(majorants), marker=\"o\", label=\"majorant\")\n",
     "# plt.xlabel(\"log2(1/h)\", fontsize=\"15\")\n",
@@ -349,7 +319,35 @@
     "# plt.legend(fontsize=\"15\")\n",
     "# plt.show()\n",
     "\n",
-    "# Efficiency index vs 1/h\n",
+    "# # Efficiency index vs 1/h\n",
+    "# plt.plot(1/mesh_sizes, efficiency_indices, marker=\"o\")\n",
+    "# plt.xlabel(\"1/h\", fontsize=\"15\")\n",
+    "# plt.ylabel(\"Efficiency index\", fontsize=\"15\")\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b9ebaaff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MPFA\n",
+    "mesh_sizes = np.array([0.1, 0.05, 0.025, 0.0125, 0.00625])\n",
+    "true_errors = np.array([0.0173, 0.00890, 0.00441, 0.00220, 0.00109])\n",
+    "majorants = np.array([0.0449, 0.0227, 0.0113, 0.00563, 0.00280])\n",
+    "efficiency_indices = np.array([2.59, 2.55, 2.56, 2.56, 2.56])\n",
+    "\n",
+    "# # Error vs 1/h\n",
+    "# plt.plot(np.log2(1/mesh_sizes), np.log2(true_errors), marker=\"o\", label=\"true error\")\n",
+    "# plt.plot(np.log2(1/mesh_sizes), np.log2(majorants), marker=\"o\", label=\"majorant\")\n",
+    "# plt.xlabel(\"log2(1/h)\", fontsize=\"15\")\n",
+    "# plt.ylabel(\"log2(error)\", fontsize=\"15\")\n",
+    "# plt.legend(fontsize=\"15\")\n",
+    "# plt.show()\n",
+    "\n",
+    "# # Efficiency index vs 1/h\n",
     "# plt.plot(1/mesh_sizes, efficiency_indices, marker=\"o\")\n",
     "# plt.xlabel(\"1/h\", fontsize=\"15\")\n",
     "# plt.ylabel(\"Efficiency index\", fontsize=\"15\")\n",
