--- a/estimates_example.ipynb
+++ b/estimates_example.ipynb
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eabd97cc",
+   "id": "d36f76b3",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "# Assing discretization. Note: Use pp.Mpfa(\"flow\") for multi-point flux approximation\n",
+    "# Assing discretization (use pp.Mpfa(\"flow\") for MPFA discretization)\n",
     "for g, d in gb:\n",
     "    d[pp.PRIMARY_VARIABLES] = {\"pressure\": {\"cells\": 1, \"faces\": 0}}\n",
     "    d[pp.DISCRETIZATION] = {\n",
